# BrowseCraft

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
backend/: .env.example  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
docs/: demo-runbook.md  rl-benchmarks-roadmap.md  rl-workflow.md
sim/: package.json  pyproject.toml  remote_tasks.jsonl  tsconfig.json  vitest.config.ts
sim/scripts/: analyze.ts  baseline.ts  collect.ts  collect_claude_trajectories.py  collect_text_qa_trajectories.py  export.ts  export_rft_tasks.py  export_stage_manifests.py  export_trajectories.py  generate-tasks.ts  generate_hud_tasks.py  generate_prompt_augmentations.py  import_hud_job.py
sim/src/: index.ts  types.ts
sim/src/browsecraft_sim/: main.py
sim/src/browsecraft_sim/rl/: __init__.py  augmentation.py  config.py  curriculum.py  hud_env.py  task_generator.py  text_qa.py
sim/src/collect/: index.ts
sim/src/curriculum/: index.ts
sim/src/execute/: execute-code.ts  extract-code.ts  primitives.ts  system-prompt.ts
sim/src/export/: jsonl.ts  stage-manifests.ts
sim/src/grading/: build.ts  creative-renderer.ts  creative.ts  metrics.ts
sim/src/tasks/: build.ts  creative-prompts.json  creative.ts  python-random.ts  spatial-worlds.ts
sim/src/text-qa/: index.ts
sim/src/world/: coords.ts  headless-world.ts  setup.ts
sim/test/: creative.test.ts  execute.test.ts  grading.test.ts  primitives.test.ts  tasks.test.ts  world.test.ts
sim/test/fixtures/: seed45_build_tasks.json  seed45_text_qa_tasks.json
(+56 files in other folders)
