[project]
name = "browsecraft-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "websockets>=16.0"
]

[project.scripts]
browsecraft-sim = "browsecraft_sim.main:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
